Ensure pop-over legend is visible against same color
Charts with area series coud make the legend appear invisible when the
legend appears over the top of a series of the same colour.

--- a/app/assets/stylesheets/d3.sass
+++ b/app/assets/stylesheets/d3.sass
@@ -76,6 +76,7 @@ line
     white-space: nowrap
 
     span.square
+      border: 1px solid white
       display: inline-block
       width: 12px
       height: 12px
